--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
  Hello there, awesome person! 
- <img src="https://octodex.github.com/images/vinyltocat.png">
+<ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
+<ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+</ul>
