--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <li>This</li>
     <li>Is an</li>
     <li>Ordered list</li>
-</ol>
+    <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
 <ul>
     <li>This</li>
     <li>Is an</li>
