--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
  Hello there, awesome person! 
-<ol>
-    <li>This</li>
-    <li>Is an</li>
-    <li>Ordered list</li>
-    <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
-<ul>
-    <li>This</li>
-    <li>Is an</li>
-    <li>Unordered list</li>
-</ul>
+<head>
+        <title>I am a title!</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
